--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy>=1.22.3
 pandas>=1.4.2
 python-dotenv>=0.21.0
 setuptools>=63.2.0
-yt_dlpyt_dlp
+yt_dlp
 youtube_search_python>=1.6.6
 pynacl>=1.5.0
 pytest
